Added More Methods

--- a/XeroAutomation/src/test/resources/Utility/XeroObjectRepository.properties
+++ b/XeroAutomation/src/test/resources/Utility/XeroObjectRepository.properties
@@ -7,11 +7,14 @@ Xero.LoginPage.ForgotPassword=xpath://a[@class='forgot-password-advert']
 Xero.LoginPage.ValidUsername=pallavivenu2405@gmail.com
 Xero.LoginPage.ValidPassword=Palsvenu80
 Xero.LoginPage.LoginTitle=Login
+Xero.HomePage.Login=//a[@class='btn btn-tertiary-alt global-ceiling-bar-btn']
 
 
 Xero.HomePage.HomepageTitle=TekArch
 Xero.LoginPage.InValidPassword=Palsve
 Xero.LoginPage.InValidUsername=pallavivenu240@gmail.com
+Xero.LoginPage.AdditionalValidUsername=gopala.anumanchipalli@gmail.com
+Xero.LoginPage.AdditionalValidPassword=password12
 
 Xero.LoginPage.ExpectedErrorMsgForInvaliPassword=Your Email or Password is incorrect
 Xero.ForgotPage.Title=Forgotten Password
@@ -22,6 +25,7 @@ Xero.ForgotPage.DisplayedText1=xpath://div[@id='contentTop']/div[@class='x-boxed
 Xero.ForgotPage.DisplayedText2=xpath://div[@id='contentTop']/div[@class='x-boxed noBorder']/p/strong
 
 Xero.ForgetPage.ExpDisplayText= A link to reset your password has been sent to: pallavivenu2405@gmail.com
+xn-h-menu-list a-fade-in
 
 
 
@@ -58,6 +62,8 @@ Xero.HomePage.Files=xpath://a[@class='files']
 Xero.HomePage.Notifications=xpath://a[@class='notifications x-sandbox']
 Xero.HomePage.Search=xpath://a[@class='search']
 Xero.HomePage.Help=xpath://a[@class='help']
+Xero.HomePage.Payroll.Display=xpath://ul[@class='xn-h-menu-list a-fade-in']
+
 
 Xero.HomePage.Userdropdown=xpath://a[@class='username']
 Xero.HomePage.ListOfUserdropdown=xpath://ul[@class='xn-h-profile-card-navigation']/li/a
@@ -71,7 +77,6 @@ Xero.FreeTrial.ExpFirstNameErrMsg=First name can't be empty
 Xero.FreeTrial.ExpLastNameErrMsg=Last name can't be empty
 Xero.FreeTrial.ExpEmailErrMsg=Email address can't be empty
 Xero.FreeTrial.ExpPhoneErrMsg=Phone number  can't be empty
-
 Xero.FreeTrial.ValidFirstName=Pallavi   
 Xero.FreeTrial.ValidLastName=Sugavanam
 Xero.FreeTrial.ValidEmail=sugam_l@yahoo.com
@@ -80,4 +85,39 @@ Xero.FreeTrial.ValidPhoneNumber=5104478965
 Xero.FreeTrial.WrongFormatEmail=pallavi.com
 Xero.FreeTrial.ExpWrongFormatEmailErrMsg=Email address is invalid
 
-            
+Xero.DashBoard.OrgName=xpath://h2[@class='org-name']
+Xero.DashBoard.XeroName=xpath://a[@class='myxero-link']
+
+Xero.DashBoard.OrganisationDetails=xpath://div[@class='x-content']//section[1]
+Xero.DashBoard.AddOrganisation=xpath://a[@id='ext-gen1043']
+text-1022-inputEl
+countryCmb-inputEl
+Xero.Organisation.Name=xpath://input[@id='text-1022-inputEl']
+Xero.Organisation.PayTaxes=xpath://input[@id='countryCmb-inputEl']
+Xero.Organisation.TimeZone=id:cmbTimeZone-inputEl
+industrysearchcombofield-1025-inputEl
+Xero.Organisation.Do=xpath://input[@id='industrysearchcombofield-1025-inputEl']
+Xero.Organisation.StartTrial=id:simplebutton-1035
+Xero.Organisation.BuyNow=id:simplebutton-1036
+Xero.Organisation.NameText=self
+Xero.Organisation.DoText=Accounting
+Xero.Organisation.StreetText=3450 granada ave
+Xero.Organisation.TownText=Santa Clara
+Xero.Organisation.Zipcode=95051
+Xero.Organisation.Starter=xpath://section[@id='Starter']//div[@class='xui-styledcheckboxradio--radio']
+Xero.Organisation.VerifyText=3450 granada ave,Santa Clara,95051
+
+Xero.Organisation.Continue=xpath://button[@id='continueButton']
+Xero.Organisation.Street=xpath://input[@id='contactAddress']
+Xero.Organisation.Town=xpath://input[@id='contactCity']
+Xero.Organisation.State=xpath://div[@id='postalAddress']//button[@type='button']
+Xero.Organisation.ZipCode=xpath://input[@id='contactPostalCode']
+ Xero.Organisation.California=xpath://li[@id='California']//button[@type='button']
+Xero.Organisation.Continue1=xpath://button[contains(text(),'Continue to Review & Pay')]
+Xero.Organisation.VerifyAddress=xpath://div[@class='xui-margin-horizontal-large xui-padding-vertical']//p[2]
+Xero.Organisation.ConvertQuickbook=xpath://body[@class='xui-body']/div[@id='react-app']/div/div/div/div/div[1]
+Xero.Organisation.ConvertQuickbook1=xpath://input[@id='conversionCheckbox-inputEl']
+Xero.Organisation.QuickbookStartTrail=id:simplebutton-1035
+Xero.Organisation.QuickbookContinue=id:simplebutton-1036
+
+ Xero.Organisation.FileConversion=xpath://div[@id='toolbar-1044-innerCt']
